2005-10-18  Jeroen Zwartepoorte  <jeroen.zwartepoorte@gmail.com>

	* gtksourceview/Makefile.am:
	* gtksourceview/gtksourcefold-private.h:
	* gtksourceview/gtksourcefold.c:
	* gtksourceview/gtksourcefold.h:
	
	Add non-visible part of code-folding functionality.
	
	* gtksourceview/gtksourcelanguage.c:
	(_gtk_source_language_new_from_file), (process_language_node),
	(get_mime_types_from_file), (parseLineComment),
	(parseBlockComment), (parseString), (parseKeywordList),
	(parsePatternItem), (parseSyntaxItem), (parseTag),
	(language_file_parse):
	* gtksourceview/gtksourceprintjob.c:
	(update_page_size_and_margins), (face_and_size_from_full_name),
	(font_description_from_gnome_font_name):
	
	Fix gcc4 warnings about pointer signedness (fixes #309663).

=== gtksourceview 1.4.2 ===

2005-10-03  Paolo Borelli  <pborelli@katamail.com>

	* configure.in:
	* README:
	* NEWS: release 1.4.2.

2005-09-06  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/Makefile.am: add LDFLAGS = -no-undefined, for
	benefit of people compiling on win32. Suggested by
	yselkowitz@users.sourceforge.net, bug #314414.

=== gtksourceview 1.4.1 ===

2005-09-06  Paolo Borelli  <pborelli@katamail.com>

	* configure.in:
	* README:
	* NEWS: release 1.4.1 including the docs in the tarball.

=== gtksourceview 1.4.0 ===

2005-09-05  Paolo Borelli  <pborelli@katamail.com>

	* configure.in:
	* README:
	* NEWS: release 1.4.0.

=== gtksourceview 1.3.93 ===

2005-08-29  Paolo Maggi  <paolo@gnome.org>

	* configure.in:
	* README:
	* NEWS: release 1.3.93.

2005-08-29  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.c (key_press_event): shift+enter
	doesn't autoindent.

2005-08-25  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #312482: Undo manager warning

	* gtksourceview/gtksourceundomanager.c
	(gtk_source_undo_manager_modified_changed_handler): action can be NULL
	when internally undoing/redoing a non undoable action.

=== gtksourceview 1.3.92 ===
